# Processor-Simulator

./: README.md  quadratic_accumulator.s  quadratic_eval.s  quadratic_stack.s  quardratic_accumulator.s
accumulator/: CMakeLists.txt  package.xml
accumulator/include/: accumulator.hpp  cpu.hpp  loader.hpp  memory.hpp
accumulator/src/: accumulator.cpp  cpu.cpp  loader.cpp  main.cpp  memory.cpp
binary_encodings/: binary_encodings.cpp  binary_encodings.txt  quadratic_accumulator_hex.s  quadratic_stack_hex.s
helpers/: CMakeLists.txt  package.xml
helpers/include/: bit_operations.hpp  debug_helpers.hpp  file_handling_helpers.hpp
helpers/src/: bit_operations.cpp  debug_helpers.cpp  file_handling_helpers.cpp
stack/: CMakeLists.txt  package.xml
stack/include/: cpu.hpp  loader.hpp  memory.hpp
stack/src/: cpu.cpp  loader.cpp  main.cpp  memory.cpp
